--- a/src/app/components/finanzas/dialogs/dialog-treasury-detail/dialog-treasury-detail.component.html
+++ b/src/app/components/finanzas/dialogs/dialog-treasury-detail/dialog-treasury-detail.component.html
@@ -64,6 +64,11 @@
             <td mat-cell *matCellDef="let r">{{ r.category || r.concept }}</td>
           </ng-container>
 
+                    <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef>Tipo Movimiento</th>
+            <td mat-cell *matCellDef="let r">{{ r.type }}</td>
+          </ng-container>
+
           <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef>Cantidad</th>
             <td mat-cell *matCellDef="let r">Q {{ r.amount | number:'1.2-2' }}</td>
@@ -78,8 +83,8 @@
           </ng-container>
 
           <!-- Orden de columnas: No., Fecha, Concepto, Cantidad, Acciones -->
-          <tr mat-header-row *matHeaderRowDef="['index','date','concept','amount','actions']"></tr>
-          <tr mat-row *matRowDef="let row; columns: ['index','date','concept','amount','actions'];"></tr>
+          <tr mat-header-row *matHeaderRowDef="['index','date','concept', 'type', 'amount','actions']"></tr>
+          <tr mat-row *matRowDef="let row; columns: ['index','date','concept', 'type', 'amount','actions'];"></tr>
         </table>
       </div>
 
